
+---------+---------+---------+---------+---------+---------+---------+---------+ 
d.09/24/2015.22_38_41.67.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.
Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   Doc/K/T.2015.BugFree.cs
	modified:   History.txt

+---------+---------+---------+---------+---------+---------+---------+---------+ 
d.2015/09/28.18_10_50.07.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   Doc/K/T.2015.BugFree.cs
	modified:   History.txt
	new file:   "ZGame/game_tutorials/OpenGL/3DS Animation/\346\201\220\351\276\231\345\212\250\347\224\273.3DS"

+---------+---------+---------+---------+---------+---------+---------+---------+ 
d.2015/09/29.00_27_06.84.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.
Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   Doc/K/T.2015.BugFree.cs
	new file:   Doc/Npp/Npp.ChangeLog.cs
	modified:   History.txt

+---------+---------+---------+---------+---------+---------+---------+---------+ 
d.2015/09/29.18_01_17.21.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   Doc/K/T.2015.BugFree.cs
	modified:   History.txt

+---------+---------+---------+---------+---------+---------+---------+---------+ 
d.2015/09/30.08_45_39.99.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.
Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	new file:   "Doc/DX/\350\256\241\347\256\227yaw\343\200\201pitch\343\200\201roll\350\247\222\345\272\246.cs"
	modified:   History.txt
	modified:   ZGame/game_tutorials/Direct3D/Matrices/d3d_obj.cpp
	modified:   ZGame/game_tutorials/Direct3D/Matrices/win_main.cpp
