@@ -96,9 +96,10 @@
       L648, 35:R#.26   @znote merida 山地车
       L654, 36:R#.27   @shader
       L700, 37:R#.28   @DirectX Tool Kit
-     Zndex_E : //z 2015-09-29 17:37:34 L.93 '22946 T3077765571.K ~831 +----+----+----+----+----+
-     TimeCnt : //z 2015-09-29 17:21:43 L.93 '23897 T3076364060.K ~43  +----+----+----+----+----+
-     Reg.Cnt : //z 2015-09-29 00:25:55 L.93 '84845 T2957396635.K ~32  +----+----+----+----+----+
+     Zndex_E : //z 2015-09-30 14:07:04 L.92 '35576 T827036850 .K ~856 +----+----+----+----+----+
+     TimeCnt : //z 2015-09-30 14:05:43 L.92 '35657 T826965107 .K ~46  +----+----+----+----+----+
+     Reg.Cnt : //z 2015-09-30 11:02:00 L.92 '46680 T1247420550.K ~33  +----+----+----+----+----+
+     #33  R+ : //z 2015-09-30 11:02:00 L.92 '46680 T1247420550.K ~33    V+.865  L+.924  
      #32  R+ : //z 2015-09-29 00:25:55 L.93 '84845 T2957396635.K ~32    V+.816  L+.888  
      #31  R+ : //z 2015-09-29 00:10:42 L.93 '85758 T2956030993.K ~31    V+.809  L+.858  
      #30  R+ : //z 2015-09-24 20:55:24 L.98 '11076 T1959487447.K ~30    V+.779  L+.821  
@@ -135,7 +136,9 @@
      #3   O+ : //z 2015-09-04 21:24:47 L.118'9313  T3067438199.K ~3     V+.731  L+.1    
      #2   O+ : //z 2015-08-06 08:25:11 L.147'56089 T2984249525.K ~2     V+.572  L+.1    
      #1   O+ : //z 2015-06-18 08:36:17 L.196'55423 T2695262750.K ~1     V+.374  L+.1    
-     Version : //z 2015-09-29 17:37:34 L.93 '22946 T3077765571.K ~863   R+.32   L+.918  --+----+
+     Version : //z 2015-09-30 14:07:04 L.92 '35576 T827036850 .K ~889   R+.33   L+.945  --+----+
+     #46  V+ : //z 2015-09-30 11:05:33 L.92 '46467 T1247528463.K ~874   R+.33   L+.931  
+     #45  R+ : //z 2015-09-30 11:02:00 L.92 '46680 T1247420550.K ~865   R+.33   L+.925  V+.865  
      #45  V+ : //z 2015-09-29 17:35:28 L.93 '23072 T3077693668.K ~855   R+.32   L+.916  
      #44  V+ : //z 2015-09-29 17:21:25 L.93 '23915 T3076363996.K ~836   R+.32   L+.903  
      #43  V+ : //z 2015-09-29 00:25:56 L.93 '84844 T2957396636.K ~817   R+.32   L+.890  
@@ -543,6 +546,10 @@ PC游戏编程（人机博弈）
 
 作者在教学中不断指出，OpenGL是图形编程很基础的东西，在其基础上有很多开源框架，你如果直接学习这些框架，而不具备图像编程的基础知识，会有一种空中楼阁的感觉，他建议在完成本书后可以学习一两个开源框架，通过成熟的框架来帮助你具备工业级开发的能力。在最后一章也较详细的讲述了，完成本书的学习后如果想进一步在图像编程发展，可以怎么做。
 我读的时候本书还没翻译，读原版虽然被图形学的词汇绕的有点晕，但还是坚持下来了觉得收获很大，让我一个没接触过3D图像编程的Android码农真正的入门了。现在翻译版上架，写一些自己的读后感，作为对原作者诚意作品的感谢。
+
+//z 2015-09-30 13:45:42 L.92 '36858 T3835208117.K[T45,L550,R20,V882]
+Advanced Lighting and Materials with Shaders
+By Kelly Dempski, Emmanuel Viale
 #endregion //z 2015-06-24 13:07:42 L.190'39138 BG57IV3@XCL T2164378419.K.F4146951713-+----+----+
 
 #region 07-01 18:10 R#.21   @Game tmp
@@ -914,6 +921,26 @@ The kW X-port 3ds Max X file exporter
 http://www.kwxport.org/
 https://github.com/jwatte/kwxport.git
 
+对Lib3ds的一个封装，有注释
+http://www.codeproject.com/Articles/406882/Modified-version-of-lib-ds-reader-of-ds-format
+
 wine 中的 D3DXMatrixDecompose 的实现；对于了解具体是如何运算出来有参考意义。
 https://www.winehq.org/pipermail/wine-cvs/2008-September/047460.html
 #endregion //z 2015-09-29 00:25:55 L.93 '84845 BG57IV3@BYH T2957396635.K.F4146951713-+----+----+
+
+#region 09-30 11:02 R#.33   @骨骼动画 cal3d
+01. 
+//z 2015-09-30 11:02:02 L.92 '46678 T1247420552.K[T44,L925,R33,V866]
+使用cal3d骨骼动画
+http://www.jeepshoe.org/692605504.htm
+
+3ds Max中导出Cal3D骨骼动画
+http://ranjiao.com/blog/index.php/tag/cal3d/
+
+Cal3d
+http://gna.org/projects/cal3d/
+
+//z 2015-09-30 14:05:43 L.92 '35657 T826965107 .K[T46,L943,R33,V884]
+Tools, tools, tools 关于图形学的一些工具
+http://www.realtimerendering.com/blog/tag/directcompute/
+#endregion //z 2015-09-30 11:02:00 L.92 '46680 BG57IV3@XCL T1247420550.K.F4146951713-+----+----+
